Screw Modifier ignores material setup #37519

Closed
opened 2013-11-18 17:21:21 +01:00 by Karja Krähwald · 9 comments

System Information
Windows 7 64, HD 5770

Blender Version
Broken: Blender 2.69 r60995 + r61240
Worked: -

Short description of error
The Screw Modifier dont generate the meshs materials correct.
In fact, only the first materialslot is used - other materials are converted into the first, even if you havent used it at all.

Exact steps for others to reproduce the error
I have attached a file.Screw-bug.blend

  1. Create a plane and subdivide 1 time.
  2. Use different materials for the subdivisions. (change color)
  3. Add a Screw-Modifier. (screw the plane to make it easier to see)

Problem: The materials on the mesh are gone.

**System Information** Windows 7 64, HD 5770 **Blender Version** Broken: Blender 2.69 r60995 + r61240 Worked: - **Short description of error** The Screw Modifier dont generate the meshs materials correct. In fact, only the first materialslot is used - other materials are converted into the first, even if you havent used it at all. **Exact steps for others to reproduce the error** I have attached a file.[Screw-bug.blend](https://archive.blender.org/developer/F28488/Screw-bug.blend) 1. Create a plane and subdivide 1 time. 2. Use different materials for the subdivisions. (change color) 3. Add a Screw-Modifier. (screw the plane to make it easier to see) Problem: The materials on the mesh are gone.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @karja

Added subscriber: @karja

System Information
Windows 7 64, HD 5770

**System Information** Windows 7 64, HD 5770

Added subscriber: @brecht

Added subscriber: @brecht

Confirmed, probably the material id in faces gets lost somehow and needs to be copied.

Confirmed, probably the material id in faces gets lost somehow and needs to be copied.

This issue was referenced by blender/blender-addons-contrib@74a1e4dcf2

This issue was referenced by blender/blender-addons-contrib@74a1e4dcf23c0ba2b3ed84888e8c7225f872e9f9

This issue was referenced by 74a1e4dcf2

This issue was referenced by 74a1e4dcf23c0ba2b3ed84888e8c7225f872e9f9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 74a1e4dcf2.

Closed by commit 74a1e4dcf2.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37519
No description provided.